;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; BUILDING TESTER  ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(test
 (name test)
 (libraries libdash ctypes ctypes.foreign)
 (deps (source_tree tests)))

;(test
; (name round_trip)
; (deps tester round_trip.sh runtest.sh (source_tree tests))
; (action (run ./runtest.sh)))

